tests/pos/i3302/A.scala
package test
//case class A(x: Int)
private object A { def apply(x: Int) = () }
